Code editor: Fix text color for select dropdowns for selected items being hard to read Code editor: Monster wizard: Fix not correctly clearing out monster type list

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -1115,6 +1115,7 @@ input[type=checkbox].property-grid-editor {
     background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
     background-repeat: repeat-x;
+    color: #000;
 }
 
 .dropdown-menu > li > a.main, .property-grid-editor-flag-dropdown-item-group {
